[gd_scene load_steps=56 format=3 uid="uid://4jm41curqcp0"]

[ext_resource type="Script" path="res://Scripts/Objects/player.gd" id="1_lvxql"]
[ext_resource type="Texture2D" uid="uid://cs7h3w1gi1o3m" path="res://Sprites/Objects/man_sprite.png" id="2_lswjw"]
[ext_resource type="PackedScene" uid="uid://dhal8mkkoaya1" path="res://Scenes/UI/qte.tscn" id="3_5od1x"]
[ext_resource type="PackedScene" uid="uid://e6w237xjc3cf" path="res://Scenes/UI/combo.tscn" id="4_2y3iu"]
[ext_resource type="PackedScene" uid="uid://b4r3htp6bwak" path="res://Scenes/UI/pullupbar.tscn" id="5_662lh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otdct"]
size = Vector2(40, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a8h5"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb4uv"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lku4v"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nak1t"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdufe"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0vrb"]
atlas = ExtResource("2_lswjw")
region = Rect2(320, 1344, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aacjh"]
atlas = ExtResource("2_lswjw")
region = Rect2(320, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcsll"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxngu"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kymts"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2usy"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubhof"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dne6"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 1600, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8cy4"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1600, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g85v0"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3kpj"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqyck"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn8s7"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq5yf"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1408, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmxd5"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1408, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pmi2"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1408, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6riri"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ivix"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p5e1"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7bln"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60d7q"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf72k"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjphd"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_go1v7"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgr27"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wigmx"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_710sd"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n80w3"]
atlas = ExtResource("2_lswjw")
region = Rect2(320, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d43p4"]
atlas = ExtResource("2_lswjw")
region = Rect2(384, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qijk"]
atlas = ExtResource("2_lswjw")
region = Rect2(448, 2240, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qalyj"]
atlas = ExtResource("2_lswjw")
region = Rect2(0, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fldj8"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1iqw"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruxxb"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j8vo"]
atlas = ExtResource("2_lswjw")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwi1r"]
atlas = ExtResource("2_lswjw")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kio36"]
atlas = ExtResource("2_lswjw")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc743"]
atlas = ExtResource("2_lswjw")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8buq5"]
atlas = ExtResource("2_lswjw")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c11ok"]
atlas = ExtResource("2_lswjw")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_si1gk"]
atlas = ExtResource("2_lswjw")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sy7v"]
atlas = ExtResource("2_lswjw")
region = Rect2(512, 576, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v22ig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a8h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb4uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lku4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nak1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdufe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0vrb")
}],
"loop": true,
"name": &"climb",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aacjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxngu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxngu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxngu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kymts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2usy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubhof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2usy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2usy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2usy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubhof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubhof")
}],
"loop": false,
"name": &"fall",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dne6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8cy4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g85v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3kpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqyck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn8s7")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq5yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmxd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pmi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmxd5")
}],
"loop": false,
"name": &"pullup",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6riri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ivix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p5e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7bln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60d7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7bln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf72k")
}],
"loop": false,
"name": &"pushup",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjphd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go1v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgr27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wigmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_710sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n80w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d43p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qijk")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qalyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fldj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1iqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruxxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1iqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fldj8")
}],
"loop": false,
"name": &"squat",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j8vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwi1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kio36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc743")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8buq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c11ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si1gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sy7v")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shptx"]
size = Vector2(34, 77)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("text_progress_bar")]
collision_layer = 5
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("1_lvxql")
text_progress_bar = NodePath("pullupbar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -47)
shape = SubResource("RectangleShape2D_otdct")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(0, -60)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_v22ig")
animation = &"climb"
frame_progress = 0.654935

[node name="QTE" parent="." instance=ExtResource("3_5od1x")]
visible = false
z_index = 2
position = Vector2(0, 41)
scale = Vector2(8, 8)

[node name="Combo" parent="." instance=ExtResource("4_2y3iu")]
z_index = 10
position = Vector2(-74, -143)

[node name="pullupbar" parent="." instance=ExtResource("5_662lh")]
visible = false
z_index = 2
offset_left = -101.0
offset_top = 9.0
offset_right = 101.0
offset_bottom = 42.0
nine_patch_stretch = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -43.5)
shape = SubResource("RectangleShape2D_shptx")

[connection signal="correct_answer" from="QTE" to="." method="_on_qte_correct_answer"]
[connection signal="won" from="QTE" to="." method="_on_qte_won"]
[connection signal="wrong" from="QTE" to="." method="_on_qte_wrong"]
[connection signal="pullup_fail" from="pullupbar" to="." method="_on_pullupbar_pullup_fail"]
[connection signal="pullup_won" from="pullupbar" to="." method="_on_pullupbar_pullup_won"]
[connection signal="upgrade_pull_up" from="pullupbar" to="." method="_on_pullupbar_upgrade_pull_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
